# ComBridge

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  BisindoMobileNet.ipynb  Dockerfile  README.md  app.py  app.yaml  cloudbuild.yaml  requirements.txt  settings.gradle.kts  tall git-filter-repo
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
backend-app/: .env  app.js  package-lock.json  package.json
backend-app/config/: database.js
backend-app/controllers/: authController.js
backend-app/models/: testUser.js  user.js
backend-auth/: .dockerignore  .env  .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  database.sql  package-lock.json  package.json  setup-permissions.sh
backend-auth/scripts/: init-cloud-sql.sh
backend-auth/src/: index.js
backend-auth/src/config/: database.js
backend-model/: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  wsgi.py
backend-model/src/api/: __init__.py  routes.py
backend-model/src/model/: preprocessing.py  tflite_model.py
backend-model/src/utils/: __init__.py  model_utils.py
combridge-backend/: .dockerignore  .env  Dockerfile  package.json
combridge-backend/database/: schema.sql
combridge-backend/src/: server.js
database/: schema.sql
gradle/wrapper/: gradle-wrapper.properties
myenv/: pyvenv.cfg
src/: config.py  server.js
src/api/: __init__.py  error_handlers.py  routes.py
src/config/: env.js
src/controllers/: authController.js
src/model/: labels.py  preprocessing.py  tflite_model.py
(+82 files in other folders)
