[project]
name = "tflite-api"
version = "0.1.0"
description = "TFLite Model API Service"
requires-python = ">=3.9,<3.13"
dependencies = [
    "flask>=2.3.3",
    "numpy>=1.24.3",
    "tflite-runtime>=2.13.0",
    "gunicorn>=21.2.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"